update: fixed Dropdown visibility logic simplified for posts, / added like button title updated.

--- a/src/app/posts/posts-list/posts-list.component.scss
+++ b/src/app/posts/posts-list/posts-list.component.scss
@@ -83,7 +83,15 @@
       display: flex;
       flex-direction: column;
       flex-grow: 1;
-
+    .dropdownMenu {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+        border: 1px solid var(--color-1);
+        border-radius: 16px;
+        background-color: var(--light-color);
+      }
       div {
         display: flex;
         flex-direction: column;
